--- a/Paper/ICPS_manipulator.tex
+++ b/Paper/ICPS_manipulator.tex
@@ -81,8 +81,7 @@ Please observe the conference page limits.
 \input{tex/ModelAndProblemFormulation}
 
 \section{Kinematic parameters estimation}
-This document is a model and instructions for \LaTeX.
-Please observe the conference page limits.
+\input{tex/KinematicParametersEstimation}
 
 \section{Simulation and experimental results}
 This document is a model and instructions for \LaTeX.
