add email address

--- a/Paper/ICPS_manipulator.tex
+++ b/Paper/ICPS_manipulator.tex
@@ -57,7 +57,7 @@
         Faculty of Control Systems and Robotics \\
         Saint Petersburg National Research University of Information Technologies, Mechanics and Optics (ITMO University) \\
         Saint Petersburg, Russia \\
-        Email: trufanova.anna.email*
+        Email: a_trufanova@itmo.ru
     }
 }
 
