--- a/Paper/ICPS_manipulator.tex
+++ b/Paper/ICPS_manipulator.tex
@@ -74,8 +74,7 @@ or Math in Paper Title or Abstract.
 \end{IEEEkeywords}
 
 \section{Introduction}
-This document is a model and instructions for \LaTeX.
-Please observe the conference page limits.
+\input{tex/Introdaction}
 
 \section{Model and problem formulation}
 \input{tex/ModelAndProblemFormulation}
